# Movie_Recomendation

./: .env.sample  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json  setup.sh
src/: main.py
src/api/: __init__.py  main.py  st-interface.py
src/data/: collector.py  movies_dataset.csv
src/ml/: movie_recommender.pkl  training.py
src/my_python_project/: __init__.py
tests/: conftest.py  test_example.py  test_recommender.py
